# pdf_optimization

./: build_faiss_index.py  character_weighted_pdf.py  dynamic_chunker.py  faiss_children.json  final_semantic_chunks.json  format_for_faiss.py  llm_parents.json  main.py  pyproject.toml  query_faiss.py  structured_spans.json  temple_metadata.json  temple_vectors.faiss
